--- a/cmd/packageloader/cover.html
+++ b/cmd/packageloader/cover.html
@@ -55,7 +55,7 @@
 			<div id="nav">
 				<select id="files">
 				
-				<option value="file0">github.com/skycoin/cx/cmd/packageloader/packageloader.go (28.7%)</option>
+				<option value="file0">github.com/skycoin/cx/cmd/packageloader/packageloader.go (71.1%)</option>
 				
 				</select>
 			</div>
@@ -141,65 +141,64 @@ func main() <span class="cov0" title="0">{
                 packageList.addPackagesIn(path)
         }</span>
         <span class="cov0" title="0">count := 0
-        for _, _ = range packageList.Packages </span><span class="cov0" title="0">{
+        for range packageList.Packages </span><span class="cov0" title="0">{
                 count++
         }</span>
-        <span class="cov0" title="0">log.Print(count)</span>
 }
 
-func (packageList *PackageList) addPackagesIn(path string) <span class="cov0" title="0">{
-        if path[len(path)-1:] != "/" </span><span class="cov0" title="0">{
+func (packageList *PackageList) addPackagesIn(path string) <span class="cov8" title="1">{
+        if path[len(path)-1:] != "/" </span><span class="cov8" title="1">{
                 path += "/"
         }</span>
-        <span class="cov0" title="0">CURRENT_PATH = path
+        <span class="cov8" title="1">CURRENT_PATH = path
         if contains(IMPORTED_DIRECTORIES, CURRENT_PATH) </span><span class="cov0" title="0">{
                 return
         }</span>
-        <span class="cov0" title="0">newPackage := Package{}
+        <span class="cov8" title="1">newPackage := Package{}
         imports := []string{}
         fileList := []os.FileInfo{}
         files, err := ioutil.ReadDir(CURRENT_PATH)
         if err != nil </span><span class="cov0" title="0">{
                 log.Fatal(err)
         }</span>
-        <span class="cov0" title="0">for _, fileInfo := range files </span><span class="cov0" title="0">{
-                if fileInfo.Name()[len(fileInfo.Name())-2:] != "cx" </span><span class="cov0" title="0">{
+        <span class="cov8" title="1">for _, fileInfo := range files </span><span class="cov8" title="1">{
+                if fileInfo.Name()[len(fileInfo.Name())-2:] != "cx" </span><span class="cov8" title="1">{
                         continue</span>
                 }
-                <span class="cov0" title="0">fileList = append(fileList, fileInfo)</span>
+                <span class="cov8" title="1">fileList = append(fileList, fileInfo)</span>
         }
-        <span class="cov0" title="0">if len(fileList) == 1 </span><span class="cov0" title="0">{
+        <span class="cov8" title="1">if len(fileList) == 1 </span><span class="cov8" title="1">{
                 packageName, err := getPackageName(fileList[0])
                 if err != nil </span><span class="cov0" title="0">{
                         log.Fatal(err)
                 }</span>
-                <span class="cov0" title="0">imports, err = getImports(fileList[0], imports)
+                <span class="cov8" title="1">imports, err = getImports(fileList[0], imports)
                 if err != nil </span><span class="cov0" title="0">{
                         log.Fatal(err)
                 }</span>
-                <span class="cov0" title="0">newPackage.PackageName = packageName</span>
+                <span class="cov8" title="1">newPackage.PackageName = packageName</span>
         }
-        <span class="cov0" title="0">if len(fileList) &gt; 1 </span><span class="cov0" title="0">{
+        <span class="cov8" title="1">if len(fileList) &gt; 1 </span><span class="cov8" title="1">{
                 samePackage := false
                 packageName := ""
                 samePackage, packageName, imports, err = comparePackageNames(fileList, imports)
                 if err != nil </span><span class="cov0" title="0">{
                         log.Fatal(err)
                 }</span>
-                <span class="cov0" title="0">if !samePackage </span><span class="cov0" title="0">{
+                <span class="cov8" title="1">if !samePackage </span><span class="cov0" title="0">{
                         log.Print("Files in directory " + CURRENT_PATH + " are not all in the same newPackage.\nSource of the error: " + packageName)
                         log.Fatal("ErrMismatchedPackageFiles")
                 }</span>
-                <span class="cov0" title="0">newPackage.PackageName = packageName</span>
+                <span class="cov8" title="1">newPackage.PackageName = packageName</span>
         }
-        <span class="cov0" title="0">newPackage.addFiles(fileList)
+        <span class="cov8" title="1">newPackage.addFiles(fileList)
         packageList.hashPackage(&amp;newPackage)
         IMPORTED_DIRECTORIES = append(IMPORTED_DIRECTORIES, CURRENT_PATH)
-        for _, path := range imports </span><span class="cov0" title="0">{
+        for _, path := range imports </span><span class="cov8" title="1">{
                 if contains(SKIP_PACKAGES, path) </span><span class="cov0" title="0">{
                         continue</span>
                 }
-                <span class="cov0" title="0">packageList.addPackagesIn(SRC_PATH + path)</span>
+                <span class="cov8" title="1">packageList.addPackagesIn(SRC_PATH + path)</span>
         }
 }
 
@@ -270,8 +269,8 @@ func getImports(fileInfo fs.FileInfo, imports []string) ([]string, error) <span 
 }
 
 // Add the hashes of the files in fileList to the package
-func (newPackage *Package) addFiles(fileList []fs.FileInfo) <span class="cov0" title="0">{
-        for _, file := range fileList </span><span class="cov0" title="0">{
+func (newPackage *Package) addFiles(fileList []fs.FileInfo) <span class="cov8" title="1">{
+        for _, file := range fileList </span><span class="cov8" title="1">{
                 newFile := File{
                         FileName: file.Name(),
                         Length:   uint32(file.Size()),
@@ -280,7 +279,7 @@ func (newPackage *Package) addFiles(fileList []fs.FileInfo) <span class="cov0" t
                 if err != nil </span><span class="cov0" title="0">{
                         log.Fatal(err)
                 }</span>
-                <span class="cov0" title="0">newFile.Content = byteArray
+                <span class="cov8" title="1">newFile.Content = byteArray
                 h := blake2b.Sum512(byteArray)
                 newFile.Blake2Hash = string(h[:])
                 newPackage.hashFile(&amp;newFile)</span>
@@ -288,7 +287,7 @@ func (newPackage *Package) addFiles(fileList []fs.FileInfo) <span class="cov0" t
 }
 
 // Encode a file and put it in the specified package
-func (newPackage *Package) hashFile(newFile *File) error <span class="cov0" title="0">{
+func (newPackage *Package) hashFile(newFile *File) error <span class="cov8" title="1">{
         var buffer bytes.Buffer
         encoder := gob.NewEncoder(&amp;buffer)
 
@@ -296,14 +295,14 @@ func (newPackage *Package) hashFile(newFile *File) error <span class="cov0" titl
         if err != nil </span><span class="cov0" title="0">{
                 return err
         }</span>
-        <span class="cov0" title="0">h := blake2b.Sum512(buffer.Bytes())
+        <span class="cov8" title="1">h := blake2b.Sum512(buffer.Bytes())
 
         newPackage.Files = append(newPackage.Files, string(h[:]))
         return nil</span>
 }
 
 // Encode a package and put it in the specified package list
-func (packageList *PackageList) hashPackage(newPackage *Package) error <span class="cov0" title="0">{
+func (packageList *PackageList) hashPackage(newPackage *Package) error <span class="cov8" title="1">{
         var buffer bytes.Buffer
         encoder := gob.NewEncoder(&amp;buffer)
 
@@ -311,7 +310,7 @@ func (packageList *PackageList) hashPackage(newPackage *Package) error <span cla
         if err != nil </span><span class="cov0" title="0">{
                 return err
         }</span>
-        <span class="cov0" title="0">h := blake2b.Sum512(buffer.Bytes())
+        <span class="cov8" title="1">h := blake2b.Sum512(buffer.Bytes())
         packageList.Packages = append(packageList.Packages, string(h[:]))
         return nil</span>
 }
